--- a/example.bib
+++ b/example.bib
@@ -197,6 +197,38 @@
   publisher={Microbiology Society}
 }
 
+@article{afgan2015genomics,
+  title={Genomics virtual laboratory: a practical bioinformatics workbench for the cloud},
+  author={Afgan, Enis and Sloggett, Clare and Goonasekera, Nuwan and Makunin, Igor and Benson, Derek and Crowe, Mark and Gladman, Simon and Kowsar, Yousef and Pheasant, Michael and Horst, Ron and others},
+  journal={PloS one},
+  volume={10},
+  number={10},
+  pages={e0140829},
+  year={2015},
+  publisher={Public Library of Science}
+}
+
+@article{liu2014cloud,
+  title={Cloud-based bioinformatics workflow platform for large-scale next-generation sequencing analyses},
+  author={Liu, Bo and Madduri, Ravi K and Sotomayor, Borja and Chard, Kyle and Lacinski, Lukasz and Dave, Utpal J and Li, Jianqiang and Liu, Chunchen and Foster, Ian T},
+  journal={Journal of biomedical informatics},
+  volume={49},
+  pages={119--133},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{vivian2017toil,
+  title={Toil enables reproducible, open source, big biomedical data analyses},
+  author={Vivian, John and Rao, Arjun Arkal and Nothaft, Frank Austin and Ketchum, Christopher and Armstrong, Joel and Novak, Adam and Pfeil, Jacob and Narkizian, Jake and Deran, Alden D and Musselman-Brown, Audrey and others},
+  journal={Nature biotechnology},
+  volume={35},
+  number={4},
+  pages={314},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
 
 % BLOG
 
@@ -425,6 +457,18 @@
     note = {[Online; accessed July, 2018]},
     url = {https://mybroadband.co.za/news/cloud-hosting/248475-be-ready-for-azure-servers-in-south-africa-microsoft.html}
 }
+
+@article{navale2018cloud,
+  title={Cloud computing applications for biomedical science: A perspective},
+  author={Navale, Vivek and Bourne, Philip E},
+  journal={PLoS computational biology},
+  volume={14},
+  number={6},
+  pages={e1006144},
+  year={2018},
+  publisher={Public Library of Science}
+}
+
 
 % WEBSITE
 
