--- a/example.bib
+++ b/example.bib
@@ -229,6 +229,45 @@
   publisher={Nature Publishing Group}
 }
 
+@article{di2017nextflow,
+  title={Nextflow enables reproducible computational workflows},
+  author={Di Tommaso, Paolo and Chatzou, Maria and Floden, Evan W and Barja, Pablo Prieto and Palumbo, Emilio and Notredame, Cedric},
+  journal={Nature biotechnology},
+  volume={35},
+  number={4},
+  pages={316},
+  year={2017},
+  publisher={Nature Publishing Group}
+}
+
+@article{amstutz2016common,
+  title={Common workflow language, v1. 0},
+  author={Amstutz, Peter and Crusoe, Michael R and Tijani{\'c}, Neboj{\v{s}}a and Chapman, Brad and Chilton, John and Heuer, Michael and Kartashov, Andrey and Leehr, Dan and M{\'e}nager, Herv{\'e} and Nedeljkovich, Maya and others},
+  year={2016}
+}
+
+@article{rashed2012python,
+  title={Python in computational science: applications and possibilities},
+  author={Rashed, Md Golam and Ahsan, Raquib},
+  journal={International Journal of Computer Applications},
+  volume={46},
+  number={20},
+  pages={26--30},
+  year={2012},
+  publisher={International Journal of Computer Applications, 244 5 th Avenue,\# 1526, New~…}
+}
+
+@article{muller2015python,
+  title={Python in neuroscience},
+  author={Muller, Eilif and Bednar, James A and Diesmann, Markus and Gewaltig, Marc-Oliver and Hines, Michael and Davison, Andrew P},
+  journal={Frontiers in neuroinformatics},
+  volume={9},
+  pages={11},
+  year={2015},
+  publisher={Frontiers}
+}
+
+
 
 % BLOG
 
