--- a/main.tex
+++ b/main.tex
@@ -193,7 +193,7 @@ headsepline, % Uncomment to get a line under the header
 \item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself.\\
 \end{itemize}
  
-\noindent Signed:\\
+\noindent Signed:\\ 
 \rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
  
 \noindent Date:\\
@@ -255,10 +255,12 @@ I would like to especially acknowledge and thank my mentor, Peter van Heusden, f
 \textbf{AMI} & \textbf{A}mazon \textbf{M}achine \textbf{I}mage\\
 \textbf{ARC} & \textbf{A}frican \textbf{R}esearch \textbf{C}loud\\
 \textbf{API} & \textbf{A}pplication \textbf{P}rogramming \textbf{I}nterface\\
+\textbf{AWS} & \textbf{A}mazon \textbf{W}eb \textbf{S}ervices\\
 \textbf{CFQ} & \textbf{C}ompletely \textbf{F}air \textbf{Q}ueuing\\
 \textbf{CHPC} & \textbf{Center} for \textbf{H}igh \textbf{P}erformance \textbf{C}omputing\\
 \textbf{CLIMB} & \textbf{Cl}oud \textbf{I}nfrastructure for \textbf{M}icrobial \textbf{B}ioinformatics\\
 \textbf{CSIR} & \textbf{C}ouncil for \textbf{S}cientific and \textbf{I}ndustrial \textbf{R}esearch\\
+\textbf{CWL} & \textbf{C}ommon \textbf{W}orkflow and \textbf{L}Language \\
 \textbf{GPU} & \textbf{G}raphics \textbf{P}rocessing \textbf{Unit}\\
 \textbf{HPC} & \textbf{H}igh \textbf{P}erformance \textbf{C}omputing\\
 \textbf{IaaS} & \textbf{I}nfrastructure \textbf{a}s \textbf{a} \textbf{S}ervice\\
